2004-06-01  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, docs/nanoblogger.html:
	Updated "Settings and Configurations" and "Plugins" sections of manual.

2004-05-31  n1xt3r  <n1xt3r@bluefalcon>

	* plugins/list_entries.sh, ChangeLog:
	Replaced PERMALINKS with PERMALINKS_DIR.

	* plugins/list_entries.sh, ChangeLog:
	Replaced FULL_PERMALINKS with ENTRY_ARCHIVES.

	* ChangeLog, default/blog.conf, docs/nanoblogger.html, nb:
	- Renamed PERMALINKS to ENTRY_ARCHIVES.
	- Updated "Settings and Configurations" section of manual.

	* docs/nanoblogger.html, nb, plugins/list_entries.sh, ChangeLog:
	- (query_db): added new parameter, db_offset.
	- Resurrected NB_Older_Entries in list_entries plugin using db_offset.
	- Minor update to docs.

	* ChangeLog, default/blog.conf, docs/nanoblogger.html:
	Updated "Requirements" and "Settings and Configuration" Sections of manual.

	* nb, plugins/atom.sh, plugins/rss.sh:
	- (query_db): Added new query_type, limit.
	- Updated Atom and RSS plugins to use new query_type, limit.

	* ChangeLog, default/blog.conf, nb, plugins/atom.sh, plugins/list_entries.sh, plugins/rss.sh:
	- Renamed MAX_DISPLAY to MAX_ENTRIES.
	- Renamed PERMALINKS to PERMALINKS_DIR.
	- Renamed FULL_PERMALINKS to PERMALINKS.
	- Renamed CAT_FEEDS to CATEGORY_FEEDS.

2004-05-30  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, nb:
	- Combined code from delete_blog into new function, find_categories.
	- (delete_blog): Fixed data loss (replaced bad cat/sed command).
	- (delete_blog): Now requires the mv command.
	- (move_entry): Categories now get updated properly.
	- (move_entry): Now tests if a category needs to be modified.
	- (move_entry): Fixed data loss (removed unecessary sed command).

2004-05-29  n1xt3r  <n1xt3r@bluefalcon>

	* default/templates/atom.xml: Removed xml:lang="en" from <feed> tag.

	* default/templates/atom.xml, default/templates/rdf.xml, default/templates/rdf_catfeed.xml:
	Updated RSS and Atom templates, set encoding back to BLOG_CHARSET.
