@@ -124,6 +124,10 @@ Programs:
 <blockquote>
 	<em>BLOG_URL</em> is used as the address for the blog.  Typically, you would set this to a remote address such as: "http://myblogurl.com".  Replacing <em>myblogurl.com</em> with the actual address to your blog.
 </blockquote>
+<b>Setting the Link for "Main"</b>
+<blockquote>
+	<em>BLOG_URL_MAIN</em> is used as the navigational link for "main".  The default is set to $BLOG_URL/index.html,  for easier local navigation.
+</blockquote>
 <b>Setting the Style Sheet</b>
 <blockquote>
 	<em>BLOG_CSS</em> is used as the link to the style sheet in the default set of templates.  It provides an easy way to edit or switch the style sheet's location without having to edit each template.  It should be set in a similar fashion to <em>BLOG_URL</em>.
@@ -135,6 +139,10 @@ Programs:
 <b>Setting the Number of Entries to Display</b>
 <blockquote>
 	<em>MAX_ENTRIES</em> sets the maximum number of entries that get displayed as current.  This must be set to a number higher than zero.
+</blockquote>
+<b>Toggling the Display of Permalinks</b>
+<blockquote>
+	<em>PERMALINKS</em> toggles display of permalinks along-side an entry.  The default is set to "1", display permalinks.
 </blockquote>
 <b>Building Individual Archives for Each Entry</b>
 <blockquote>
@@ -551,9 +559,9 @@ Here are the steps to enable comments:
 
 <h2><a name="cr11">Credits</a></h2>
 <p />
-Thanks to Adrien "ze" Urban for many code enhancements and suggestions.<br />
+Thanks to Adrien "ze" Urban, Paul Drain &#60;pd_at_cipherfunk.org&#62;, Pavel Janik &#60;Pavel_at_Janik.cz&#62;, and O.R.Senthil Kumaran &#60;orsenthil_at_users.sourceforge.net&#62; for all the contributions and suggestions.
 <p />
-Thanks to Bowie J. Poag, author of MicroBlogger [3], for the inspiration of this project.<br />
+Thanks to Bowie J. Poag, author of MicroBlogger [3], for the inspiration of this project.
 <p />
 <a href="http://home.columbus.rr.com/n1xt3r/downloads/">1. http://home.columbus.rr.com/n1xt3r/downloads/</a><br />
 <a href="http://freshmeat.net/projects/cgicomment/">2. http://freshmeat.net/projects/cgicomment/</a><br />
